# stereo_visual_odom

./: .gitignore  CMakeLists.txt  README.md  package.xml
calibration/: APL_tank_left.yaml  APL_tank_right.yaml  kitti_left.yaml  kitti_right.yaml  zed_left.yaml  zed_right.yaml
cfg/: StereoVisualOdom.cfg
helper_nodes/: display_poses.py  record_twists.py
include/stereo_visual_odom/: configuration.h  input.h  utils.h  visualOdometry.h
launch/: stereo_visual_odom.launch
launch/config/: stereo_visual_odom_configuration.yaml
lib/: Frame.cpp  bucket.cpp  configuration.cpp  evaluate_odometry.cpp  feature.cpp  input.cpp  matrix.cpp  utils.cpp  visualOdometry.cpp
params/: stereo_visual_odom_configuration.yaml
src/: bucket.cpp  configuration.cpp  configuration.h  feature.cpp  feature.h  input.cpp  input.h  main.cpp  stereo_odom.cpp  utils.cpp  utils.h  visualOdometry.cpp  visualOdometry.h
